--- a/BrainForProbing/resources/probing_configuration.json
+++ b/BrainForProbing/resources/probing_configuration.json
@@ -1,26 +1,7 @@
 [{
+  "type" : "ple",
   "sources": [
     "pl2.tailab.eu",
-"ple1.hpca.ual.es",
-"ple2.hpca.ual.es",
-"pl2.prakinf.tu-ilmenau.de",
-"ple3.planet-lab.eu",
-"mars.planetlab.haw-hamburg.de",
-"ple42.planet-lab.eu",
-"node2.planetlab.uni-luebeck.de",
-"ple41.planet-lab.eu",
-"ple2.planet-lab.eu",
-"ple43.planet-lab.eu",
-"planetlab1.cs.uoi.gr",
-"planetlab2.cs.uoi.gr",
-"ple1.cesnet.cz",
-"ple2.cesnet.cz",
-"netissime1.planet-lab.eu",
-"netissime2.planet-lab.eu"
-  ],
-  "destinations": [
-        "pl2.tailab.eu",
-"ple1.hpca.ual.es",
 "ple2.hpca.ual.es",
 "pl2.prakinf.tu-ilmenau.de",
 "ple3.planet-lab.eu",
@@ -36,214 +17,24 @@
 "ple2.cesnet.cz",
 "netissime1.planet-lab.eu",
 "netissime2.planet-lab.eu",
-"planetlab1.cs.ubc.ca",
-"planetlab1.postel.org",
-"planetlab-5.eecs.cwru.edu",
-"planetlab1.dtc.umn.edu",
-"lefthand.eecs.harvard.edu",
-"plink.cs.uwaterloo.ca",
-"planetlab1.koganei.itrc.net",
-"planetlab2.koganei.itrc.net",
-"planetlab2.cs.purdue.edu",
-"planetlab1.pop-mg.rnp.br",
-"planetlab2.pop-mg.rnp.br",
-"planetlab02.cs.washington.edu",
-"planetlab1.cesnet.cz",
-"planetlab04.cs.washington.edu",
-"planetlab2.cesnet.cz",
-"planetlab5.ie.cuhk.edu.hk",
-"planetlab2.inf.ethz.ch",
-"planetlab4.mini.pw.edu.pl",
-"planetlab3.williams.edu",
-"planetlab1.comp.nus.edu.sg",
-"planetlabone.ccs.neu.edu",
-"planetlab2.cs.unc.edu",
-"planetlab1.cs.uoregon.edu",
-"planetlab2.dtc.umn.edu",
-"cs-planetlab3.cs.surrey.sfu.ca",
-"pl1.ucs.indiana.edu",
-"pl2.ucs.indiana.edu",
-"planetlab3.cesnet.cz",
-"saturn.planetlab.carleton.ca",
-"planetlab1.unr.edu",
-"planetlab3.eecs.umich.edu",
-"pl2.eng.monash.edu.au",
-"planetlab3.rutgers.edu",
-"planetlab3.comp.nus.edu.sg",
-"planetlab1.cs.purdue.edu",
-"planetlab5.williams.edu",
-"planetlab4.williams.edu",
-"planetlab-n1.wand.net.nz",
-"planetlab5.eecs.umich.edu",
-"planetlab01.cs.washington.edu",
-"planet-lab4.uba.ar",
-"planetlab2.aut.ac.nz",
-"planetlab1.aut.ac.nz",
-"whitefall.planetlab.cs.umd.edu",
-"planetlab4.postel.org",
-"pl1.rcc.uottawa.ca",
-"pl1.eng.monash.edu.au",
-"planetlab2.pop-pa.rnp.br",
-"planetlab03.cs.washington.edu",
-"planetlab1.pop-pa.rnp.br",
-"planetlab-n2.wand.net.nz",
-"planetlab3.cs.uoregon.edu",
-"node2.planetlab.mathcs.emory.edu",
-"node1.planetlab.mathcs.emory.edu",
-"node1.planetlab.albany.edu",
-"planetlab3.wail.wisc.edu",
-"planetlab4.cs.uoregon.edu",
-"planetlab-2.calpoly-netlab.net",
-"planetlab1.utdallas.edu",
-"planetlab-js1.cert.org.cn",
-"planetlab2.utdallas.edu",
-"planetlab1.temple.edu",
-"planetlab-1.scie.uestc.edu.cn"
+"chronos.disy.inf.uni-konstanz.de",
+"iraplab1.iralab.uni-karlsruhe.de",
+"iraplab2.iralab.uni-karlsruhe.de",
+"dplanet1.uoc.edu",
+"kulcha.mimuw.edu.pl",
+"planetlab-2.cs.ucy.ac.cy",
+"planetlab1.ifi.uio.no",
+"planetlab2.informatik.uni-goettingen.de",
+"planetlab2.upm.ro",
+"planetvs2.informatik.uni-stuttgart.de",
+"puri.mimuw.edu.pl",
+"ple44.planet-lab.eu",
+"stella.planetlab.ntua.gr",
+"planet3.cs.huji.ac.il",
+"planet4.cs.huji.ac.il"
   ],
-  "commands": [
-    {
-      "command": "paris-traceroute",
-      "options": [],
-      "filterSrc": [],
-      "filterDst": [],
-      "frequency": 3600 
-    }
-  ]
-},
-
-{
-  "type": "ple",
-  "sources": [
-    "planetlab1.cs.ubc.ca",
-"planetlab1.postel.org",
-"planetlab-5.eecs.cwru.edu",
-"planetlab1.dtc.umn.edu",
-"lefthand.eecs.harvard.edu",
-"plink.cs.uwaterloo.ca",
-"planetlab1.koganei.itrc.net",
-"planetlab2.koganei.itrc.net",
-"planetlab2.cs.purdue.edu",
-"planetlab1.pop-mg.rnp.br",
-"planetlab2.pop-mg.rnp.br",
-"planetlab02.cs.washington.edu",
-"planetlab1.cesnet.cz",
-"planetlab04.cs.washington.edu",
-"planetlab2.cesnet.cz",
-"planetlab5.ie.cuhk.edu.hk",
-"planetlab2.inf.ethz.ch",
-"planetlab4.mini.pw.edu.pl",
-"planetlab3.williams.edu",
-"planetlab1.comp.nus.edu.sg",
-"planetlabone.ccs.neu.edu",
-"planetlab2.cs.unc.edu",
-"planetlab1.cs.uoregon.edu",
-"planetlab2.dtc.umn.edu",
-"cs-planetlab3.cs.surrey.sfu.ca",
-"pl1.ucs.indiana.edu",
-"pl2.ucs.indiana.edu",
-"planetlab3.cesnet.cz",
-"saturn.planetlab.carleton.ca",
-"planetlab1.unr.edu",
-"planetlab3.eecs.umich.edu",
-"pl2.eng.monash.edu.au",
-"planetlab3.rutgers.edu",
-"planetlab3.comp.nus.edu.sg",
-"planetlab1.cs.purdue.edu",
-"planetlab5.williams.edu",
-"planetlab4.williams.edu",
-"planetlab-n1.wand.net.nz",
-"planetlab5.eecs.umich.edu",
-"planetlab01.cs.washington.edu",
-"planet-lab4.uba.ar",
-"planetlab2.aut.ac.nz",
-"planetlab1.aut.ac.nz",
-"whitefall.planetlab.cs.umd.edu",
-"planetlab4.postel.org",
-"pl1.rcc.uottawa.ca",
-"pl1.eng.monash.edu.au",
-"planetlab2.pop-pa.rnp.br",
-"planetlab03.cs.washington.edu",
-"planetlab1.pop-pa.rnp.br",
-"planetlab-n2.wand.net.nz",
-"planetlab3.cs.uoregon.edu",
-"node2.planetlab.mathcs.emory.edu",
-"node1.planetlab.mathcs.emory.edu",
-"node1.planetlab.albany.edu",
-"planetlab3.wail.wisc.edu",
-"planetlab4.cs.uoregon.edu",
-"planetlab-2.calpoly-netlab.net",
-"planetlab1.utdallas.edu",
-"planetlab-js1.cert.org.cn",
-"planetlab2.utdallas.edu",
-"planetlab1.temple.edu",
-"planetlab-1.scie.uestc.edu.cn"
-],
   "destinations": [
-    "planetlab1.cs.ubc.ca",
-"planetlab1.postel.org",
-"planetlab-5.eecs.cwru.edu",
-"planetlab1.dtc.umn.edu",
-"lefthand.eecs.harvard.edu",
-"plink.cs.uwaterloo.ca",
-"planetlab1.koganei.itrc.net",
-"planetlab2.koganei.itrc.net",
-"planetlab2.cs.purdue.edu",
-"planetlab1.pop-mg.rnp.br",
-"planetlab2.pop-mg.rnp.br",
-"planetlab02.cs.washington.edu",
-"planetlab1.cesnet.cz",
-"planetlab04.cs.washington.edu",
-"planetlab2.cesnet.cz",
-"planetlab5.ie.cuhk.edu.hk",
-"planetlab2.inf.ethz.ch",
-"planetlab4.mini.pw.edu.pl",
-"planetlab3.williams.edu",
-"planetlab1.comp.nus.edu.sg",
-"planetlabone.ccs.neu.edu",
-"planetlab2.cs.unc.edu",
-"planetlab1.cs.uoregon.edu",
-"planetlab2.dtc.umn.edu",
-"cs-planetlab3.cs.surrey.sfu.ca",
-"pl1.ucs.indiana.edu",
-"pl2.ucs.indiana.edu",
-"planetlab3.cesnet.cz",
-"saturn.planetlab.carleton.ca",
-"planetlab1.unr.edu",
-"planetlab3.eecs.umich.edu",
-"pl2.eng.monash.edu.au",
-"planetlab3.rutgers.edu",
-"planetlab3.comp.nus.edu.sg",
-"planetlab1.cs.purdue.edu",
-"planetlab5.williams.edu",
-"planetlab4.williams.edu",
-"planetlab-n1.wand.net.nz",
-"planetlab5.eecs.umich.edu",
-"planetlab01.cs.washington.edu",
-"planet-lab4.uba.ar",
-"planetlab2.aut.ac.nz",
-"planetlab1.aut.ac.nz",
-"whitefall.planetlab.cs.umd.edu",
-"planetlab4.postel.org",
-"pl1.rcc.uottawa.ca",
-"pl1.eng.monash.edu.au",
-"planetlab2.pop-pa.rnp.br",
-"planetlab03.cs.washington.edu",
-"planetlab1.pop-pa.rnp.br",
-"planetlab-n2.wand.net.nz",
-"planetlab3.cs.uoregon.edu",
-"node2.planetlab.mathcs.emory.edu",
-"node1.planetlab.mathcs.emory.edu",
-"node1.planetlab.albany.edu",
-"planetlab3.wail.wisc.edu",
-"planetlab4.cs.uoregon.edu",
-"planetlab-2.calpoly-netlab.net",
-"planetlab1.utdallas.edu",
-"planetlab-js1.cert.org.cn",
-"planetlab2.utdallas.edu",
-"planetlab1.temple.edu",
-"planetlab-1.scie.uestc.edu.cn",
-"pl2.tailab.eu",
-"ple1.hpca.ual.es",
+        "pl2.tailab.eu",
 "ple2.hpca.ual.es",
 "pl2.prakinf.tu-ilmenau.de",
 "ple3.planet-lab.eu",
@@ -258,18 +49,164 @@
 "ple1.cesnet.cz",
 "ple2.cesnet.cz",
 "netissime1.planet-lab.eu",
-"netissime2.planet-lab.eu"
-],
+"netissime2.planet-lab.eu",
+"2.16.174.8",
+"2.17.140.1",
+"2.17.220.1",
+"2.21.128.1",
+"2.21.144.1",
+"2.21.192.41",
+"2.21.224.1",
+"2.21.244.1",
+"2.21.248.1",
+"2.21.252.1",
+"2.22.0.24",
+"2.22.36.10",
+"2.22.40.7",
+"2.22.63.1",
+"2.22.238.7",
+"2.22.240.10",
+"2.23.128.40",
+"2.23.144.29",
+"23.1.0.6",
+"23.2.12.4",
+"23.2.176.4",
+"23.13.32.17",
+"23.32.10.1",
+"23.32.84.17",
+"23.32.88.17",
+"23.32.96.52",
+"23.32.220.1",
+"23.33.0.1",
+"23.33.64.1",
+"23.36.230.1",
+"23.39.32.1",
+"23.47.48.7",
+"23.47.64.1",
+"23.52.16.24",
+"23.52.80.9",
+"23.52.144.6",
+"23.53.16.1",
+"23.53.32.8",
+"23.53.48.16",
+"23.64.142.1",
+"23.64.208.1",
+"23.64.224.1",
+"23.65.116.1",
+"23.77.200.7",
+"23.77.252.7",
+"23.78.64.27",
+"23.78.80.7",
+"23.78.96.7",
+"23.78.112.27",
+"23.195.252.1",
+"23.208.28.1",
+"23.208.72.1",
+"23.208.112.1",
+"23.211.136.224",
+"23.211.137.212",
+"23.211.138.1",
+"23.214.192.1",
+"23.216.96.1",
+"23.216.112.1",
+"23.223.16.35",
+"23.223.32.7",
+"37.99.200.1",
+"37.99.201.1",
+"37.99.202.1",
+"37.99.203.1",
+"37.99.204.1",
+"37.99.205.1",
+"37.99.206.1",
+"37.99.207.1",
+"43.228.184.1",
+"46.230.224.17",
+"62.115.63.9",
+"72.246.240.4",
+"72.247.16.1",
+"72.247.20.1",
+"72.247.64.1",
+"72.247.172.7",
+"72.247.192.7",
+"80.91.248.17",
+"80.239.128.1",
+"80.239.160.17",
+"80.239.192.46",
+"80.239.245.231",
+"92.122.50.1",
+"92.122.92.7",
+"92.122.222.7",
+"92.123.68.1",
+"92.241.192.1",
+"95.100.100.1",
+"95.101.133.6",
+"96.16.192.1",
+"96.17.80.31",
+"103.47.204.1",
+"104.71.212.1",
+"104.71.216.1",
+"104.71.218.1",
+"104.73.14.1",
+"104.73.80.1",
+"104.75.14.9",
+"104.75.48.31",
+"104.75.65.2",
+"104.75.80.8",
+"104.76.200.1",
+"104.76.210.1",
+"104.76.214.1",
+"104.120.240.1",
+"104.122.220.1",
+"104.122.224.1",
+"104.122.240.1",
+"104.123.112.1",
+"104.123.128.1",
+"104.123.144.1",
+"104.126.160.1",
+"109.75.97.61",
+"159.153.150.3",
+"173.222.164.7",
+"173.222.234.4",
+"173.223.152.1",
+"184.28.192.8",
+"184.28.196.1",
+"184.31.224.5",
+"185.26.158.1",
+"185.47.164.3",
+"193.45.10.132",
+"193.45.15.198",
+"195.12.233.115",
+"202.163.0.1",
+"209.95.136.1",
+"209.95.140.1",
+"209.170.79.113",
+"209.170.72.3",
+"209.170.76.1",
+"209.170.86.1",
+"209.170.90.1",
+"209.170.94.47",
+"209.170.97.5",
+"209.170.98.1",
+"209.170.111.1",
+"209.170.113.1",
+"209.170.115.1",
+"209.170.117.1",
+"209.170.118.5",
+"209.170.122.1",
+"209.170.123.1",
+"209.170.124.1",
+"213.155.129.61",
+"213.248.66.114",
+"217.212.224.132"
+  ],
   "commands": [
     {
-      "command": "traceroute",
+      "command": "paris-traceroute",
       "options": [],
       "filterSrc": [],
       "filterDst": [],
-      "frequency": 3600
+      "frequency": 3600 
     }
-
-
   ]
 }
 ]
