--- a/BrainForProbing/resources/dumb_config.json
+++ b/BrainForProbing/resources/dumb_config.json
@@ -1,18 +1,12 @@
 [{
-  "type": "ple",
+  "type": "ripe",
 
   "sources": [
-     "ple1.cesnet.cz",
-  "netissime1.planet-lab.eu",
-  "kulcha.mimuw.edu.pl",
-  "iraplab1.iralab.uni-karlsruhe.de"
+     33925
   ],
 
   "destinations": [
-    "2.22.238.7",
-  "2.22.240.10",
-  "2.23.128.40",
-  "2.23.144.29"
+    "2.16.174.8"
   ],
 
   "commands": [
