--- a/BrainForProbing/resources/dumb_config.json
+++ b/BrainForProbing/resources/dumb_config.json
@@ -1,12 +1,34 @@
 [{
-  "type": "ripe",
+  "type": "ple",
 
   "sources": [
-     33925
+     "ple42.planet-lab.eu",
+    "ple1.cesnet.cz"
   ],
 
   "destinations": [
-    "2.16.174.8"
+"2.16.174.8",
+"google.fr",
+"2.21.192.41",
+"2.21.224.1",
+"2.21.244.1",
+"23.223.16.35",
+"23.223.32.7",
+"37.99.200.1",
+"37.99.201.1",
+"37.99.202.1",
+"37.99.203.1",
+"37.99.204.1",
+"37.99.205.1",
+"37.99.206.1",
+"37.99.207.1",
+"43.228.184.1",
+"46.230.224.17",
+"62.115.63.9",
+"72.246.240.4",
+"72.247.16.1",
+"72.247.20.1",
+"72.247.64.1"
   ],
 
   "commands": [
