--- a/BrainForProbing/resources/probing_configuration.json
+++ b/BrainForProbing/resources/probing_configuration.json
@@ -1,8 +1,6 @@
 [{
   "type" : "ple",
   "sources": [
-    "pl2.tailab.eu",
-"ple2.hpca.ual.es",
 "pl2.prakinf.tu-ilmenau.de",
 "ple3.planet-lab.eu",
 "mars.planetlab.haw-hamburg.de",
@@ -11,7 +9,6 @@
 "ple41.planet-lab.eu",
 "ple2.planet-lab.eu",
 "ple43.planet-lab.eu",
-"planetlab1.cs.uoi.gr",
 "ple1.cesnet.cz",
 "ple2.cesnet.cz",
 "netissime1.planet-lab.eu",
@@ -21,7 +18,6 @@
 "iraplab2.iralab.uni-karlsruhe.de",
 "dplanet1.uoc.edu",
 "kulcha.mimuw.edu.pl",
-"planetlab-2.cs.ucy.ac.cy",
 "planetlab1.ifi.uio.no",
 "planetlab2.informatik.uni-goettingen.de",
 "planetlab2.upm.ro",
@@ -29,8 +25,20 @@
 "puri.mimuw.edu.pl",
 "ple44.planet-lab.eu",
 "stella.planetlab.ntua.gr",
-"planet3.cs.huji.ac.il",
-"planet4.cs.huji.ac.il"
+"planetlab-1.research.netlab.hut.fi",
+"ple1.planet-lab.eu",
+"planetlab1.informatik.uni-goettingen.de",
+"onelab2.pl.sophia.inria.fr",
+"nuc1.planet-lab.eu",
+"planet-lab-node2.netgroup.uniroma2.it",
+"planetlab-1.ing.unimo.it",
+"planetlab-2.ing.unimo.it",
+"planetlab1.cs.uit.no",
+"planetlab11.net.in.tum.de",
+"planetlab13.net.in.tum.de",
+"planetlab1.upm.ro",
+"vicky.planetlab.ntua.gr"
+
   ],
   "destinations": [
 "2.17.140.1",
@@ -63,7 +71,6 @@
 "23.33.64.1",
 "23.36.230.1",
 "23.39.32.1",
-"23.47.48.7",
 "23.47.64.1",
 "23.52.16.24",
 "23.52.80.9",
@@ -75,12 +82,6 @@
 "23.64.208.1",
 "23.64.224.1",
 "23.65.116.1",
-"23.77.200.7",
-"23.77.252.7",
-"23.78.64.27",
-"23.78.80.7",
-"23.78.96.7",
-"23.78.112.27",
 "23.195.252.1",
 "23.208.28.1",
 "23.208.72.1",
@@ -113,11 +114,8 @@
 "80.91.248.17",
 "80.239.128.1",
 "80.239.160.17",
-"80.239.192.46",
 "80.239.245.231",
 "92.122.50.1",
-"92.122.92.7",
-"92.122.222.7",
 "92.123.68.1",
 "92.241.192.1",
 "95.100.100.1",
@@ -154,7 +152,6 @@
 "184.28.196.1",
 "184.31.224.5",
 "185.26.158.1",
-"185.47.164.3",
 "193.45.10.132",
 "193.45.15.198",
 "195.12.233.115",
@@ -178,7 +175,6 @@
 "209.170.123.1",
 "209.170.124.1",
 "213.155.129.61",
-"213.248.66.114",
 "217.212.224.132"
   ],
   "commands": [
