Removing SFTP (scripts)

--- a/BrainForProbing/resources/slow_probing_configuration.json
+++ b/BrainForProbing/resources/slow_probing_configuration.json
@@ -1,31 +1,14 @@
 [{
   "type" : "ple",
   "sources": [
-"pl2.prakinf.tu-ilmenau.de",
-"ple3.planet-lab.eu",
-"mars.planetlab.haw-hamburg.de",
-"ple42.planet-lab.eu",
-"node2.planetlab.uni-luebeck.de",
-"ple2.planet-lab.eu",
-"ple43.planet-lab.eu",
-"ple1.cesnet.cz",
-"ple2.cesnet.cz",
-"netissime1.planet-lab.eu",
-"netissime2.planet-lab.eu",
-"dplanet1.uoc.edu",
-"kulcha.mimuw.edu.pl",
 "planetlab2.informatik.uni-goettingen.de",
-"planetlab2.upm.ro",
-"puri.mimuw.edu.pl",
-"planetlab-1.research.netlab.hut.fi",
-"ple1.planet-lab.eu",
-"planetlab1.informatik.uni-goettingen.de",
-"onelab2.pl.sophia.inria.fr",
-"nuc1.planet-lab.eu",
-"planet-lab-node2.netgroup.uniroma2.it",
-"planetlab11.net.in.tum.de",
-"planetlab13.net.in.tum.de",
-"vicky.planetlab.ntua.gr"
+"iraplab2.iralab.uni-karlsruhe.de",
+"planetvs2.informatik.uni-stuttgart.de",
+"iraplab1.iralab.uni-karlsruhe.de",
+"ple41.planet-lab.eu",
+"planetlab1.ifi.uio.no",
+"ple44.planet-lab.eu",
+"planetlab2.upm.ro"
   ],
   "destinations": [
 "2.17.140.1",
@@ -170,7 +153,7 @@
       "options": [],
       "filterSrc": [],
       "filterDst": [],
-      "frequency": 3600 
+      "frequency": 3600
     }
   ]
 }
