--- a/BrainForProbing/resources/slow_probing_configuration.json
+++ b/BrainForProbing/resources/slow_probing_configuration.json
@@ -2,7 +2,7 @@
   "type" : "ple",
   "sources": [
 "planetlab2.informatik.uni-goettingen.de",
-"planetlab2.upm.ro",
+"ple3.planet-lab.eu",
 "vicky.planetlab.ntua.gr",
 "planetlab1.informatik.uni-goettingen.de",
 "dplanet1.uoc.edu",
