--- a/data/mapping.json
+++ b/data/mapping.json
@@ -2,11 +2,9 @@
     "ple1.cesnet.cz": "195.113.161.13",
     "ple2.cesnet.cz": "195.113.161.14",
     "ple2.planet-lab.eu": "132.227.123.12",
-    "ple42.planet-lab.eu": "132.227.123.42",
     "ple43.planet-lab.eu": "132.227.123.43",
     "ple44.planet-lab.eu": "132.227.123.44",
     "kulcha.mimuw.edu.pl": "193.0.109.23",
     "puri.mimuw.edu.pl": "193.0.109.25",
-    "pl2.prakinf.tu-ilmenau.de": "141.24.249.131",
-    "mars.planetlab.haw-hamburg.de": "141.22.213.35"
+    "pl2.prakinf.tu-ilmenau.de": "141.24.249.131"
 }
